--- a/css/styles.css
+++ b/css/styles.css
@@ -79,6 +79,11 @@ h3{
     font-family: caviar_dreams !important;
 }
 
+#curriculum , #repre {
+    padding: 0 2% 5% 2%;
+}
+
+
 /* NO FUNCIONA LA MEDIA QUERY*/
 @media only screen and (width-max: 768px) {
 
