--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,7 @@ body#no_home {
 /*#trans {
     background: #ffffff;
     opacity: 0.6;
-    /*filter: alpha(opacity=60);*/
+    /*filter: alpha(opacity=60);
 }*/
 
 
@@ -72,6 +72,7 @@ a , a:visited{
 
 footer {
     margin-right: 4%;
+    /*position: fixed !important;*/
 }
 
 h3{
@@ -83,12 +84,25 @@ h3{
     padding: 0 2% 5% 2%;
 }
 
+ul {
+    list-style: none;
+}
+
+div_slider {
+    height:766px;
+}
+
+
+iframe {
+    width: 100%;
+    height: auto;
+}
 
 /* NO FUNCIONA LA MEDIA QUERY*/
-@media only screen and (width-max: 768px) {
+@media only screen and (width-min: 768px) {
 
     #menu_lista {
-        margin-right: 5% !important;
+        margin-right: 25% !important;
      }
  }
 
