--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@
 }
 
 body#home {
+    background-color: #fdfdfd;
     background-image: url("/sherezadeatienzar/img/Sherezade_025_Web.jpeg");
     background-repeat: no-repeat;
     background-size: 1300px 867px;
@@ -18,6 +19,7 @@ body#home {
 body#no_home {
     background-image: url("/sherezadeatienzar/img/Sherezade_025_Web_B.png");
     background-repeat: no-repeat;
+    background-attachment: fixed;
     background-size: 1300px 867px;
     background-position-x: -527px;
     /*background-position-y: 5px;*/
@@ -92,7 +94,7 @@ iframe {
     height: 50%;
 }
 
-/* NO FUNCIONA LA MEDIA QUERY*/
+
 @media screen and (min-width: 768px) {
 
     #menu_lista {
@@ -120,6 +122,7 @@ iframe {
         background-attachment: fixed;
         background-position: -200px 30%;
         background-repeat: no-repeat;
+        background-attachment: fixed;
         background-size: cover;
 
     }
